Kata 7 - Getting more aware of where I use the mouse. Flip-flopped between making delimiter a property wasted a min or so.

--- a/CalculatorKata.Tests/CalculatorKata.Tests.csproj
+++ b/CalculatorKata.Tests/CalculatorKata.Tests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalculatorTest.cs" />
+    <Compile Include="CalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
